rustfs/src/admin/handlers/snapshots/rustfs__admin__handlers__kms_keys__tests__kms_admin_cancel_key_deletion_response.snap
---
source: rustfs/src/admin/handlers/kms_keys.rs
expression: "stable_json_value(CancelKmsKeyDeletionResponse\n{\n    success: true, message: \"key deletion canceled\".to_string(), key_id:\n    \"key-a\".to_string(), key_metadata: Some(snapshot_key_metadata()),\n})"
---
{
  "key_id": "key-a",
  "key_metadata": {
    "creation_date": "2026-01-01T00:00:00+00:00[UTC]",
    "deletion_date": "2026-02-01T00:00:00+00:00[UTC]",
    "description": "snapshot key",
    "key_id": "key-a",
    "key_manager": "RUSTFS",
    "key_state": "Enabled",
    "key_usage": "EncryptDecrypt",
    "origin": "RUSTFS_KMS",
    "tags": {
      "name": "key-a"
    }
  },
  "message": "key deletion canceled",
  "success": true
}
