rustfs/src/admin/handlers/snapshots/rustfs__admin__handlers__kms_keys__tests__kms_admin_create_key_api_response.snap
---
source: rustfs/src/admin/handlers/kms_keys.rs
expression: "stable_json_value(CreateKeyApiResponse\n{ key_id: \"key-a\".to_string(), key_metadata: snapshot_key_metadata(), })"
---
{
  "key_id": "key-a",
  "key_metadata": {
    "creation_date": "2026-01-01T00:00:00+00:00[UTC]",
    "deletion_date": "2026-02-01T00:00:00+00:00[UTC]",
    "description": "snapshot key",
    "key_id": "key-a",
    "key_manager": "RUSTFS",
    "key_state": "Enabled",
    "key_usage": "EncryptDecrypt",
    "origin": "RUSTFS_KMS",
    "tags": {
      "name": "key-a"
    }
  }
}
