rustfs/src/admin/handlers/snapshots/rustfs__admin__handlers__kms_keys__tests__kms_admin_describe_key_response.snap
---
source: rustfs/src/admin/handlers/kms_keys.rs
expression: "stable_json_value(DescribeKmsKeyResponse\n{\n    success: true, message: \"key described successfully\".to_string(),\n    key_metadata: Some(snapshot_key_metadata()), impact:\n    Some(referenced_impact()),\n})"
---
{
  "impact": {
    "completeness": "exact",
    "coverage": {
      "not_scanned": [
        "object-envelopes",
        "in-progress-multipart-uploads"
      ],
      "scanned": [
        "bucket-default-encryption",
        "service-default-key"
      ]
    },
    "key_id": "key-a",
    "references": [
      {
        "detail": "bucket default encryption names this key",
        "id": "sse-bucket",
        "kind": "bucket-default-encryption"
      }
    ]
  },
  "key_metadata": {
    "creation_date": "2026-01-01T00:00:00+00:00[UTC]",
    "deletion_date": "2026-02-01T00:00:00+00:00[UTC]",
    "description": "snapshot key",
    "key_id": "key-a",
    "key_manager": "RUSTFS",
    "key_state": "Enabled",
    "key_usage": "EncryptDecrypt",
    "origin": "RUSTFS_KMS",
    "tags": {
      "name": "key-a"
    }
  },
  "message": "key described successfully",
  "success": true
}
